# project12b-backend-tytik-co-restaraunts

./: .env.template  Dockerfile  Makefile  README.md  alembic.ini  main.py  pyproject.toml
.github/workflows/: ci.yml   main.yml
app/: __main__.py
app/application/: exception.py
app/application/dish/: exception.py
app/application/dish/commands/: create_dish.py  get_dish_by_id.py  get_dish_by_menu_id.py  get_dishes.py
app/application/dish/interface/: reader.py  repository.py
app/application/dto/: __init__.py  base.py  dish.py  menu.py  order.py  restaurant.py
app/application/menu/: exception.py
app/application/menu/commands/: create_menu.py  get_menu_by_id.py  get_menu_by_restaurant_id.py  get_menus.py
app/application/menu/interface/: reader.py  repository.py
app/application/restaurant/: exception.py
app/domain/common/: constant.py  pagination.py  value_object.py
app/domain/entity/: __init__.py  dish.py  menu.py  restaurant.py
app/domain/exceptions/: restaurant.py
app/infrastructure/: config_loader.py  uow.py
app/infrastructure/db/: exception_wrapper.py  main.py
app/infrastructure/di/: main.py
app/infrastructure/mediator/: main.py
app/presentation/: __main__.py  config.py  controllers.py
app/presentation/api/: dishes.py  main.py  menu.py  restaurant.py
app/presentation/exception_controllers/: exceptions.py
app/presentation/middlewares/: context.py  main.py
app/presentation/providers/: di.py  main.py  mediator.py  stub.py
app/presentation/response/: base.py
config/: config.template.toml
docker_compose/: docker-compose.yaml
(+31 files in other folders)
