[tool.poetry]
name = "fastapiproject1"
version = "0.1.0"
description = ""
authors = ["Danila Kryvanos <danila.kryvanos@improvado.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
uvicorn = "^0.33.0"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
